--- a/about.html
+++ b/about.html
@@ -7,21 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
-    <title>CIT 82 - Hands-On Week 8 - Image Compression, build page, and Favicon</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
+    <title>CIT 82 - About Doug Loera</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="../css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
   </head>
 
@@ -36,21 +36,21 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Lectures
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="../lectures/week1.html">Week 1 - About CIT 82 Technologies </a>
-                  <a class="dropdown-item" href="../lectures/week2.html">Week 2 - Lynda.com - Web Technologies</a>
-                  <a class="dropdown-item" href="../lectures/week3.html">Week 3 - HTML Crash Course </a>
-                  <a class="dropdown-item" href="../lectures/week4.html">Week 4 - CSS Crash Course</a>
-                  <a class="dropdown-item" href="../lectures/week5.html">Week 5 - Bootstrap Crash Course</a>
-                  <a class="dropdown-item" href="../lectures/week6.html">Week 6 - Get to Know Your Template </a>
-                  <a class="dropdown-item" href="../lectures/week7.html">Week 7 - Learn SEO, CMS, and Payments </a>
-                  <a class="dropdown-item" href="../lectures/week8.html">Week 8 - eCommerce and the Cloud </a>
+                  <a class="dropdown-item" href="lectures/week1.html">Week 1 - About CIT 82 Technologies </a>
+                  <a class="dropdown-item" href="lectures/week2.html">Week 2 - Lynda.com - Web Technologies</a>
+                  <a class="dropdown-item" href="lectures/week3.html">Week 3 - HTML Crash Course </a>
+                  <a class="dropdown-item" href="lectures/week4.html">Week 4 - CSS Crash Course</a>
+                  <a class="dropdown-item" href="lectures/week5.html">Week 5 - Bootstrap Crash Course</a>
+                  <a class="dropdown-item" href="lectures/week6.html">Week 6 - Get to Know Your Template </a>
+                  <a class="dropdown-item" href="lectures/week7.html">Week 7 - Learn SEO, CMS, and Payments </a>
+                  <a class="dropdown-item" href="lectures/week8.html">Week 8 - eCommerce and the Cloud </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -58,14 +58,14 @@
                   Hands-On
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="week1.html">Week 1 - Markdown</a>
-                  <a class="dropdown-item" href="week2.html">Week 2 - HTTP and Github Pages</a>
-                  <a class="dropdown-item" href="week3.html">Week 3 - Editor and Github Repos </a>
-                  <a class="dropdown-item" href="week4.html">Week 4 - Git Workflow and CSS Pages</a>
-                  <a class="dropdown-item" href="week5.html">Week 5 - Bootstrap, .gitignore, and branching</a>
-                  <a class="dropdown-item" href="week6.html">Week 6 - Copy Template and Build site </a>
-                  <a class="dropdown-item" href="week7.html">Week 7 - Create new page and a menu</a>
-                  <a class="dropdown-item" href="week8.html">Week 8 - Image Compression, build page, and Favicon </a>
+                  <a class="dropdown-item" href="handson/week1.html">Week 1 - Markdown</a>
+                  <a class="dropdown-item" href="handson/week2.html">Week 2 - HTTP and Github Pages</a>
+                  <a class="dropdown-item" href="hansdon/week3.html">Week 3 - Editor and Github Repos </a>
+                  <a class="dropdown-item" href="handson/week4.html">Week 4 - Git Workflow and CSS Pages</a>
+                  <a class="dropdown-item" href="handson/week5.html">Week 5 - Bootstrap, .gitignore, and branching</a>
+                  <a class="dropdown-item" href="handson/week6.html">Week 6 - Copy Template and Build site </a>
+                  <a class="dropdown-item" href="handson/week7.html">Week 7 - Create new page and a menu</a>
+                  <a class="dropdown-item" href="handson/week8.html">Week 8 - Image Compression, build page, and Favicon </a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -73,18 +73,18 @@
                   Current Topics
                 </a>
                 <div class="dropdown-menu bg-secondary" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="../current/week1.html">Week 1 - Hello World!</a>
-                  <a class="dropdown-item" href="../current/week2.html">Week 2 - Learn++ and HTTPS</a>
-                  <a class="dropdown-item" href="../current/week3.html">Week 3 - Git, Command Line, and Microsoft</a>
-                  <a class="dropdown-item" href="../current/week4.html">Week 4 - UTF8 and Web 2.0</a>
-                  <a class="dropdown-item" href="../current/week5.html">Week 5 - Semantic Versioning and Project 0 (Draft)</a>
-                  <a class="dropdown-item" href="../current/week6.html">Week 6 - Bootstrap Template and FTP!</a>
-                  <a class="dropdown-item" href="../current/week7.html">Week 7 - Front-end Framework and Images!</a>
-                  <a class="dropdown-item" href="../current/week8.html">Week 8 - Payment Gateway and Web Dev Builds</a>
+                  <a class="dropdown-item" href="current/week1.html">Week 1 - Hello World!</a>
+                  <a class="dropdown-item" href="current/week2.html">Week 2 - Learn++ and HTTPS</a>
+                  <a class="dropdown-item" href="current/week3.html">Week 3 - Git, Command Line, and Microsoft</a>
+                  <a class="dropdown-item" href="current/week4.html">Week 4 - UTF8 and Web 2.0</a>
+                  <a class="dropdown-item" href="current/week5.html">Week 5 - Semantic Versioning and Project 0 (Draft)</a>
+                  <a class="dropdown-item" href="current/week6.html">Week 6 - Bootstrap Template and FTP!</a>
+                  <a class="dropdown-item" href="current/week7.html">Week 7 - Front-end Framework and Images!</a>
+                  <a class="dropdown-item" href="current/week8.html">Week 8 - Payment Gateway and Web Dev Builds</a>
                 </div>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="../about.html">About Doug</a>
+                <a class="nav-link" href="about.html">About Doug</a>
              </li>
           </ul>
         </div>
@@ -92,14 +92,14 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('../img/home-bg.jpg')">
+    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>CIT 82 - Hands-On Week 8</h1>
-              <span class="subheading">Image Compression, build page, and Favicon</span>
+              <h1>CIT 82 - Fall 2018</h1>
+              <span class="subheading">Project 0</span>
             </div>
           </div>
         </div>
@@ -146,11 +146,11 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="../js/clean-blog.min.js"></script>
+    <script src="js/clean-blog.min.js"></script>
 
   </body>
 
