--- a/current/week4.html
+++ b/current/week4.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon"/>
     <title>CIT 82 - Current Topics - Week 4 - UTF8 and Web 2.0</title>
 
     <!-- Bootstrap core CSS -->
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home</a>
+              <a class="nav-link" href="../">Home</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -77,14 +77,14 @@
                   <a class="dropdown-item" href="week2.html">Week 2 - Learn++ and HTTPS</a>
                   <a class="dropdown-item" href="week3.html">Week 3 - Git, Command Line, and Microsoft</a>
                   <a class="dropdown-item" href="week4.html">Week 4 - UTF8 and Web 2.0</a>
-                  <a class="dropdown-item" href="week5.html">Week 5 - Smenatic Versioning and Project 0 (Draft)</a>
+                  <a class="dropdown-item" href="week5.html">Week 5 - Semantic Versioning and Project 0 (Draft)</a>
                   <a class="dropdown-item" href="week6.html">Week 6 - Bootstrap Template and FTP!</a>
                   <a class="dropdown-item" href="week7.html">Week 7 - Front-end Framework and Images!</a>
                   <a class="dropdown-item" href="week8.html">Week 8 - Payment Gateway and Web Dev Builds</a>
                 </div>
              </li>
              <li class="nav-item">
-                <a class="nav-link" href="../about.html">About</a>
+                <a class="nav-link" href="../about.html">About Doug</a>
              </li>
           </ul>
         </div>
