--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
+    <link href="img/favicon.ico" type="image/gif" sizes="16*16" rel="icon">
     <title>CIT 82 - Project 0 by Doug Loera</title>
 
     <!-- Bootstrap core CSS -->
